port Armor to Elasticsearch 6.5.3